# chat-webserver

./: .gitignore  AGENTS.md  README.md
Code/: CMakeLists.txt  benchmark.sh  sql
Code/business/: Api.h  Mysql.h  Transport.cpp  Transport.h  User.cpp  User.h
Code/database/: .md  Mysql.cpp  Mysql.h  MysqlPool.cpp  MysqlPool.h  Redis.cpp  Redis.h  RedisPool.cpp  RedisPool.h
Code/http/: .HttpContext.cpp.swp  .HttpServer.cpp.swp  HttpContext.cpp  HttpContext.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h
Code/http1/: HttpsContext.cpp  HttpsContext.h  HttpsRequest.h  HttpsResponse.h  HttpsServer.h  note.txt
Code/http2/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h
Code/https/: HttpsServer.cpp
Code/mysql/: Mysql.cpp  Mysql.h  MysqlPool.cpp  MysqlPool.h
Code/tcp/: Buffer.cpp  Buffer.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h
Code/test/: function_test.cpp  http_client.cpp  http_server.cpp  test_for_wrk.cpp  test_mysql.cpp
